--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,11 +147,5 @@ mat-card.small-card {
 
 
 
-::-webkit-scrollbar {
-  width: 12px;
-}
 
-:not(mat-sidenav-content) > ::-webkit-scrollbar-thumb {
-  display: none;
-}
 
